[package]
name = "cyclops-r"
version = "0.1.0"
authors = ["KaOs1 <kaos1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
flexi_logger = "0.16.1"
glium = "0.27.0"
thyme = { version = "0.3", features = ["glium_backend"] }
serde_yaml = "0.8.13"
image = "0.23"
